<resources>
    <string name="app_name">Better Home</string>
    <string name="drawer_name">Optionen</string>
    <string name="actuators">Ansteuerung</string>
    <string name="no_results">Keine Elemente in der Liste!</string>
    <string name="sensor">Sensor</string>
    <string name="sensors">Sensoren</string>
    <string name="timer">Zeitsteuerung</string>
    <string name="rooms">Räume</string>
    <string name="surveillance">Überwachung</string>
    <string name="title_element_detail">Element Detail</string>
    <string name="title_activity_initialize">Initialisierung</string>
    <string name="action_settings">Einstellungen</string>
    <string name="title_menuitem_list">Better Home</string>
    <string name="title_menuitem_detail_act">Ansteuerung</string>
    <string name="Login">Login</string>
    <string name="ip_oder_dns">IP oder DNS</string>
    <string name="port">Port</string>
    <string name="benutzername">Benutzername</string>
    <string name="passwort">Passwort</string>
    <string name="einloggen">Einloggen</string>
    <string name="betterhome_konfig">Better Home konfigurieren</string>
    <string name="benutzer">Benutzer</string>
    <string name="dummyip">192.168.1.1</string>
    <string name="dummyport">80</string>
    <string name="title_activity_entry">Better Home</string>
    <string name="laden">Laden&#8230;</string>
    <string name="konfiguration">Konfiguration</string>
    <string name="login">Login</string>
    <string name="information">Information</string>
    <string name="title_activity_information">Geräteinformationen</string>
    <string name="geraetename">Gerätename</string>
    <string name="firmware">Firmware</string>
    <string name="hardware">Hardware</string>
    <string name="bootloader">Bootloader</string>
    <string name="systeme">Systeme</string>
    <string name="laufzeit">Laufzeit</string>
    <string name="mac">MAC Adresse</string>
    <string name="dhcp">DHCP</string>
    <string name="subnet">Subnetz</string>
    <string name="gateway">Gateway</string>
    <string name="dns">DNS</string>
    <string name="features">Features</string>
    <string name="obj_name">obj_name</string>
    <string name="tag_seekbar">10</string>
    <string name="tag_spin">11</string>
    <string name="pull_to_refresh_pull_label">Ziehen zum Aktualisieren&#8230;</string>
    <string name="pull_to_refresh_release_label">Loslassen zum Aktualisieren&#8230;</string>
    <string name="pull_to_refresh_refreshing_label">Laden&#8230;</string>
    <string name="pull_to_refresh_tap_label">Tippen zum Aktualisieren&#8230;</string>
    <string name="pull">Ziehen</string>
    <string name="logo">Logo</string>
	<string name="drawer_open">Über</string>
    <string name="drawer_close">Zu</string>
    <string name="graph">Graph</string>
    <string name="an">AN</string>
    <string name="aus">AUS</string>
    <string name="admin">admin</string>
    <string name="icon">Icon</string>
    <string name="sensoren">Sensoren</string>
    <string name="zeitsteuerung">Zeitsteuerung</string>
    <string name="timeradd">Zeitsteuerung hinzufügen</string>
    <string name="timeredit">Zeitsteuerung editieren</string>
    <string name="erstellen">Erstellen</string>
    <string name="neueKomponente">Neue Komponente erstellen</string>
    <string name="name">Name</string>
    <string name="type">Typ</string>
    <string name="time">Zeit</string>
    <string name="actuator">Ansteuerung</string>
    <string name="release">Freigeben</string>
    <string name="function">Funktion</string>
    <string name="ok">OK</string>
    <string name="timer_edit">Zeitsteuerung ändern</string>
    <string name="entfernen">Entfernen</string>
    <string name="next_event">Nächstes Ereignis:</string>
    <string name="dialog_title_act">Ansteuerung editieren</string>
    <string name="dialog_title_sens">Sensor editieren</string>
    <string name="dialog_title_script">Regel editieren</string>
    <string name="cancel">Abbrechen</string>
    <string name="roomadd">Raum hinzufügen</string>
    <string name="positionadd">Position hinzufügen</string>
    <string name="elementadd">Element hinzufügen</string>
    <string name="actadd">Ansteuerung hinzufügen</string>
    <string name="camadd">Kamera hinzufügen</string>
    <string name="sensadd">Sensor hinzufügen</string>
    <string name="notAssigned">Nicht zugeordnet</string>
    <string name="editroomitem">Element bearbeiten</string>
    <string name="editroom">Raum bearbeiten</string>
    <string name="urlstream">Stream-URL (z.B. RTP/RTSP)</string>
    <string name="urlwebpage">URL</string>
    <string name="loading_video">Video wird geladen</string>
    <string name="please_wait">Bitte warten&#8230;</string>
    <string name="no_connection_defined">Keine Verbindung definiert!</string>
    <string name="warning">Warnung</string>
    <string name="exit">Exit</string>
    <string name="really_exit">Anwendung wirklich beenden?</string>
    <string name="back">Zurück</string>
    <string name="configure">Konfigurieren</string>
    <string name="no_connection">Verbindung konnte nicht hergestellt werden!</string>
    <string name="build_connection">Verbindung aufbauen&#8230;</string>
    <string name="new_s">Neu</string>
    <string name="time_oclock">Uhr</string>
    <string name="send_new_temp">Neue Temperatur gesendet!</string>
    <string name="close">Geschlossen</string>
    <string name="open">Offen</string>
    <string name="on">An</string>
    <string name="off">Aus</string>
    <string name="empty">leer</string>
    <string name="rename">Umbenennen</string>
    <string name="remove">Entfernen</string>
    <string name="today">Heute</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mär</string>
    <string name="apr">Apr</string>
    <string name="may">Mai</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Okt</string>
    <string name="nov">Nov</string>
    <string name="dec">Dez</string>
    <string name="mo">Mo</string>
    <string name="tu">Di</string>
    <string name="we">Mi</string>
    <string name="th">Do</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="so">So</string>
    <string name="days">Tag(e)</string>
    <string name="hours">Std</string>
    <string name="minutes">Min</string>
    <string name="seconds">Sek</string>
    <string name="day">Tag</string>
    <string name="week">Woche</string>
    <string name="month">Monat</string>
    <string name="quarter">Quartal</string>
    <string name="fetch_data">Daten abholen&#8230;</string>
    <string name="delete">Löschen</string>
    <string name="add_timer">Zeisteuerung anlegen&#8230;</string>
    <string name="add_timer_success">Zeitsteuerung erfolgreich angelegt&#8230;</string>
    <string name="change_timer">Zeitsteuerung ändern&#8230;</string>
    <string name="change_timer_success">Zeitsteuerung erfolgreich geändert&#8230;</string>
    <string name="delete_timer">Zeitsteuerung löschen&#8230;</string>
    <string name="delete_timer_success">Zeitsteuerung erfolgreich entfernt&#8230;</string>
    <string name="add_script">Regelsteuerung anlegen&#8230;</string>
    <string name="add_script_success">Regelsteuerung erfolgreich angelegt&#8230;</string>
    <string name="change_script">Regelsteuerung ändern&#8230;</string>
    <string name="change_script_success">Regelsteuerung erfolgreich geändert&#8230;</string>
    <string name="delete_script">Regelsteuerung löschen&#8230;</string>
    <string name="delete_script_success">Regelsteuerung erfolgreich entfernt&#8230;</string>
    <string name="add_position">Positionssteuerung anlegen&#8230;</string>
    <string name="add_position_success">Positionssteuerung erfolgreich angelegt&#8230;</string>
    <string name="change_position">Positionssteuerung ändern&#8230;</string>
    <string name="change_position_success">Positionssteuerung erfolgreich geändert&#8230;</string>
    <string name="delete_position">Positionssteuerung löschen&#8230;</string>
    <string name="delete_position_success">Positionssteuerung erfolgreich entfernt&#8230;</string>
    <string name="optional">Optional</string>
    <string name="stream">Stream</string>
    <string name="webpage">Webseite</string>
    <string name="addstream">Stream hinzufügen</string>
    <string name="camedit">Kamera bearbeiten</string>
    <string name="camstreamedit">Kamera Stream bearbeiten</string>
    <string name="camwebpageedit">Kamera Webpage bearbeiten</string>
    <string name="footer">Coded by Marcus Hammer</string>
    <string name="rules">Regelsteuerung</string>
    <string name="rulebody">Regel</string>
    <string name="if_s"><u>Wenn</u></string>
    <string name="then_s"><u>Dann</u></string>
    <string name="else_s"><u>Ansonsten</u></string>
    <string name="greaterequal">Größer gleich</string>
    <string name="smallerequal">Kleiner gleich</string>
    <string name="equal">Gleich</string>
    <string name="unequal">Ungleich</string>
    <string name="greater">Größer</string>
    <string name="smaller">Kleiner</string>
    <string name="ruleadd">Regelsteuerung hinzufügen</string>
    <string name="name_missing">Bitte einen Namen angeben!</string>
    <string name="url_missing">Bitte eine URL angeben!</string>
    <string name="rule_comparervalue_missing">Bitte einen Vergleichswert angeben!</string>
    <string name="rule_thenvalue_missing">Bitte einen Wert für DANN angeben!</string>
    <string name="rule_elsevalue_missing">Bitte einen Wert für ANSONSTEN angeben!</string>
    <string name="name_invalid">Der Name kann nicht gesetzt werden!</string>
    <string name="positions">Positionssteuerung</string>
    <string name="edit_position">Position bearbeiten</string>
    <string name="activity_execute">Ansteuerung ausführen</string>
    <string name="on_enter">Beim Betreten</string>
    <string name="on_exit">Beim Verlassen</string>
    <string name="load_position">Aktuelle Position laden!</string>
    <string name="new_position">Neue Positionssteuerung</string>
    <string name="give_name">Name vergeben:</string>
    <string name="got_position">Position bestimmt!</string>
    <string name="got_better_position">Genauere Position bestimmt!</string>
    <string name="never">Nie</string>
    <string name="inactive">Deaktiviert</string>
    <string name="radius">Radius</string>
    <string name="saved">Gespeichert</string>
    <string name="pos_service_started">Service Position neu gestartet!</string>
    <string name="pos_service">Positionssteuerung aktiv</string>
    <string name="ringtone_title">Klingelton</string>
    <string name="pref_alert_enable">Alarm</string>
    <string name="pref_alert_enable_summary">Alarm aktivieren</string>
    <string name="pref_alert_enable_ringtone">Klingelton aktivieren</string>
    <string name="pref_alert_enable_vibration">Vibration aktivieren</string>
    <string name="pref_alert_details">Alarm-Auslöser Typen</string>
    <string name="pref_alert_smoke_details_summary">Rauchmelder</string>
    <string name="pref_alert_heat_details_summary">Hitzemelder</string>
    <string name="pref_alert_water_details_summary">Wassermelder</string>
    <string name="pref_alert_windowbreak_details_summary">Fensterbruch</string>
    <string name="pref_alert_fence_details_summary">Zaunmelder</string>
    <string name="pref_alert_motion_details_summary">Bewegungsmelder</string>
    <string name="pref_global_configurations">Globale Konfigurationen</string>
    <string name="pref_refresh_seconds">Aktualisierungsintervall</string>
    <string name="pref_refresh_seconds_detail">Aktualisierungsintervall in Sekunden</string>
    <string name="pref_outlier_detection">Graph Ausreißer Eliminierung</string>
    <string name="pref_outlier_detection_detail">Ausreißer aus Graph entfernen</string>
</resources>