<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:scrollbars="none" >

<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/loginheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/betterhome_konfig"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/iplabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginheader"
        android:layout_marginRight="18dp"
        android:layout_marginTop="34dp"
        android:layout_toLeftOf="@+id/loginButton"
        android:text="@string/ip_oder_dns" />

    <TextView
        android:id="@+id/portlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/iplabel"
        android:layout_alignBottom="@+id/iplabel"
        android:layout_alignLeft="@+id/port"
        android:text="@string/port" />

    <TextView
        android:id="@+id/passwortlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/benutzername"
        android:layout_below="@+id/benutzername"
        android:layout_marginTop="30dp"
        android:text="@string/passwort" />

    <EditText
        android:id="@+id/passwort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwortlabel"
        android:layout_below="@+id/passwortlabel"
        android:ems="14"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/benutzernamelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ip"
        android:layout_below="@+id/ip"
        android:layout_marginTop="28dp"
        android:text="@string/benutzername" />

    <EditText
        android:id="@+id/benutzername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/benutzernamelabel"
        android:layout_below="@+id/benutzernamelabel"
        android:ems="14"
        android:hint="@string/benutzer"
        android:text="@string/admin" />

    <EditText
        android:id="@+id/ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/iplabel"
        android:layout_below="@+id/iplabel"
        android:ems="10"
        android:hint="@string/dummyip" >

        <requestFocus />

    </EditText>

    <EditText
        android:id="@+id/port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/portlabel"
        android:layout_toRightOf="@+id/ip"
        android:ems="4"
        android:inputType="number"
        android:hint="@string/dummyport" >
    </EditText>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwort"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:text="@string/einloggen" />

</RelativeLayout>

</ScrollView>