<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/dialog_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:labelFor="@+id/dialog_name_text" />

    <EditText
        android:id="@+id/dialog_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dialog_name_label"
        android:layout_below="@+id/dialog_name_label"
        android:ems="10"
        android:inputType="text" />
    
    <TextView
        android:id="@+id/dialog_url_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:layout_alignLeft="@+id/dialog_name_label"
        android:layout_below="@+id/dialog_name_text"
        android:text="@string/urlstream"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:labelFor="@+id/dialog_url_text" />

    <EditText
        android:id="@+id/dialog_url_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dialog_name_label"
        android:layout_below="@+id/dialog_url_label"
        android:inputType="textUri" />
    
    <TextView
        android:id="@+id/dialog_user_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:layout_alignLeft="@+id/dialog_name_label"
        android:layout_below="@+id/dialog_url_text"
        android:text="@string/benutzername"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:labelFor="@+id/dialog_user_text" />

    <EditText
        android:id="@+id/dialog_user_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dialog_user_label"
        android:layout_below="@+id/dialog_user_label"
        android:hint="@string/optional"
        android:inputType="text" />
    
    <TextView
        android:id="@+id/dialog_pass_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:layout_alignLeft="@+id/dialog_user_text"
        android:layout_below="@+id/dialog_user_text"
        android:text="@string/passwort"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:labelFor="@+id/dialog_pass_text" />

    <EditText
        android:id="@+id/dialog_pass_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dialog_pass_label"
        android:layout_below="@+id/dialog_pass_label"
        android:hint="@string/optional"
        android:inputType="textPassword" />
    
</RelativeLayout>